src/components/about/about.scss
.about-container {
  width: 80%;
  margin: 0 auto;
  font-family: 'RobotoMono', sans-serif;
  color: white;

  h2 {
    font-size: 2em;
    padding-top: 10px;
    margin: 0;
    color: #fff;
    font-family: 'RobotoMono', sans-serif;
    text-align: left;
  }

  .about-intro {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    margin-bottom: 40px;

    @media (max-width: 768px) {
      flex-direction: column;
      text-align: center;
    }

    .about-text {
      flex: 1;
      padding-right: 0;
      text-align: left;

      @media (max-width: 768px) {
        text-align: center;
        padding-right: 0;
      }

      p {
        font-size: 1.2em;
        font-family: 'RobotoMono', sans-serif;
        margin-bottom: 20px;
      }

      .purple-text {
        color: #9b30ff; /* Lighter purple for accessibility */
      }

      a {
        color: #9b30ff; /* Same lighter purple for links */
        text-decoration: underline; /* Ensure links are always underlined */

        &:visited {
          color: #9b30ff; /* Ensures visited links stay the same color */
        }

        &:hover {
          color: #8a2be2;
        }
      }
    }

    .about-photo {
      flex: 0 0 30%;
      padding-left: 5%;
      display: flex;
      justify-content: flex-end;
      align-items: center;

      img {
        width: 100%;
        height: auto;
        border: 3px solid #8a2be2;
        border-radius: 10px;
      }

      @media (max-width: 768px) {
        width: 70%;
        padding-left: 0;
        margin-top: 20px;
      }
    }
  }

  .about-technologies,
  .about-contact {
    margin-bottom: 40px;
  }

  .about-contact {
    form {
      display: flex;
      flex-direction: column;

      label {
        margin-bottom: 10px;
        font-family: 'RobotoMono', sans-serif;
      }

      input,
      textarea {
        margin-bottom: 20px;
        padding: 10px;
        font-size: 1em;
        border: 1px solid #ccc;
        border-radius: 5px;
        font-family: 'RobotoMono', sans-serif;
      }

      button {
        padding: 10px 20px;
        font-size: 1.2em;
        color: #fff;
        background-color: #8a2be2;
        border: none;
        border-radius: 5px;
        cursor: pointer;
        transition: background-color 0.3s;
        font-family: 'RobotoMono', sans-serif;

        &:hover {
          background-color: #7a23d1;
        }
      }
    }
  }
}

.about-technologies-container {
  width: 70%;
  margin: 0 auto;
  padding: 20px 0;
  font-family: 'RobotoMono', sans-serif;
  color: #fff;

  .about-technologies {
    h2 {
      font-size: 2em;
      margin-bottom: 20px;
      text-align: center;
      color: #fff;
      font-family: 'RobotoMono', sans-serif;
    }

    .technology-categories {
      display: grid;
      grid-template-columns: 1fr 1fr;
      gap: 20px;

      @media (max-width: 500px) {
        grid-template-columns: 1fr;
      }

      .technology-category {
        background-color: #2a2a2a;
        padding: 20px;
        border-radius: 10px;
        color: #fff;

        h3 {
          font-size: 1.5em;
          margin-bottom: 30px;
          text-align: center;
          color: #fff;
        }

        .technology-items {
          display: grid;
          grid-template-columns: repeat(3, 1fr);
          gap: 10px;

          @media (max-width: 500px) {
            grid-template-columns: repeat(2, 1fr) !important;
          }

          .technology-item {
            display: flex;
            flex-direction: column;
            align-items: center;
            font-size: 1.2em;
            cursor: pointer;
            color: #fff;

            i {
              font-size: 3em;
              margin-bottom: 10px;
              color: #fff;
            }

            p {
              margin: 0;
              text-align: center;
              color: #fff;
              font-family: 'Inter', sans-serif;
            }

            &:hover {
              color: #8a2be2;
            }
          }
        }
      }
    }
  }
}

